Fix sponsor and FAQ height, issues with spacing in sponsors and about pages, add links to sponsors

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -70,7 +70,7 @@
     width: 35vw;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1200px) {
     .a-backdrop{
         display: none;
     }
