--- a/src/styles/Sponsors.css
+++ b/src/styles/Sponsors.css
@@ -27,14 +27,17 @@
     padding-bottom: 35vh;
 }
 .sponsors-details>a{
-    color:white;
+    color:#64B5F6
 }
 .individual-sponsor{
-    margin-top: -45vh;
+    margin-top: -40vh;
     padding: 0px 10%;
     text-align: left;
 }
-
+.individual-sponsor>a{
+    color: inherit; 
+    text-decoration: inherit;
+}
 @media only screen and (max-width: 600px) {
     .filler-background{
         background-color: #000D1B;
@@ -47,11 +50,13 @@
     .sponsors-title{
         margin-top: -12vh;
         font-size: 1.8em;
+        padding-bottom: 15vh;
     }
     .sponsors-details{
         margin-top: -12vh;
         font-size: 1.1em;
         letter-spacing: 0.5px;
+        padding-bottom: 10%;
     }
     .individual-sponsor{
         margin-top: -12vh;
@@ -68,5 +73,10 @@
         -ms-user-select: none;
         user-select: none;
         -webkit-tap-highlight-color: transparent;
+    }
+}
+@media only screen and (min-height: 900px) {
+    .sponsors-container{
+        min-height: 0vh;
     }
 }
